kubernetes/day12-advanced/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-lab-db-service
  namespace: devops-lab
spec:
  clusterIP: None
  selector:
    app: devops-lab-db
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres
